# dummy

./: .gitignore  LICENSE  pyproject.toml
.github/ISSUE_TEMPLATE/: onboard-repository.yml
.github/workflows/: onboard-repository.yml
onboard_repository/src/presentation/controllers/: command_line_interface.py
scripts/: onboarding.py  test_onboarding.py
src/: README.md  onboard_repository.py  pyproject.toml
src/application/: use_cases.py
src/domain/: exceptions.py  interfaces.py  value_objects.py
src/infrastructure/: gateways.py
src/presentation/: controllers.py
tests/mocks/: gateways.py
tests/unit/infrastructure/: test_gateways.py
tests/unit/presentation/: test_controllers.py
