[project]
name = "onboard_repository"
version = "0.1.0"
description = "Onboard repository logic"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "pygithub==2.9.0",
]

[dependency-groups]
dev = [
    "pyright==1.1.408",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.8",
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["COM812", "D", "S101"]
line-length = 120
